# suffixarrayview

./: Cargo.toml  LICENSE  README.txt  todo.txt
src/: lib.rs  libmain.rs  main.rs
